# FM-SYNTH

./: .gitignore  CMakeLists.txt  README.md  adsr_envelope.cpp  fm_synth.cpp  fm_synth_gui.cpp  install_dependencies.sh
.github/workflows/: build.yml
gui/: gui_utils.h  lfo_dropdown.h  presets.h
synth/: constants.h  effects.h  envelope.h  filter.h  fm_synth.h  lfo.h  oscillator.h  voice.h  waveform_buffer.h
